--- a/turbo.json
+++ b/turbo.json
@@ -3,24 +3,14 @@
   "globalDependencies": ["**/.env.*local"],
   "globalPassThroughEnv": ["NODE_ENV"],
   "tasks": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", "build/**", ".next/**", "!.next/cache/**"]
-    },
-    "dev": {
+    "local": {
       "cache": false,
       "persistent": true,
       "env": ["JAVA_HOME", "GRADLE_OPTS", "PATH"]
     },
-    "lint": {
-      "dependsOn": ["^build"]
-    },
     "test": {
       "dependsOn": ["^build"],
       "outputs": ["coverage/**"]
-    },
-    "clean": {
-      "cache": false
     }
   },
   "ui": "tui"
